# NGOClaw

./: .gitignore  LICENSE  Makefile  README.md  文件说明.md
ai-service/: manifest.yaml  pyproject.toml  requirements.txt  run_ai.sh
ai-service/config/: config.yaml
ai-service/scripts/: test_grpc_features.py
ai-service/src/: main.py
ai-service/src/application/usecase/: execute_skill.py  generate_image.py  generate_response.py
ai-service/src/domain/entity/: ai_request.py  image.py  skill.py
ai-service/src/domain/repository/: ai_provider.py  image_provider.py  skill_registry.py
ai-service/src/domain/service/: image_router.py  model_router.py
ai-service/src/infrastructure/config/: __init__.py  settings.py
ai-service/src/infrastructure/grpc_server/: __init__.py  ai_service_server.py
ai-service/src/infrastructure/image/: openai_image_provider.py
ai-service/src/infrastructure/llm/: anthropic_provider.py  gemini_provider.py  minimax_provider.py  mock_provider.py  ollama_provider.py  openai_provider.py
ai-service/src/infrastructure/media/: __init__.py  handler.py
ai-service/src/infrastructure/skill/: basic_skills.py  registry.py
ai-service/src/sideload/: __init__.py  handler.py  provider.py  tool.py
ai-service/tests/unit/: test_grpc_server.py
doc/: agent_autonomy_research.md
docs/: ARCHITECTURE.md  USER_MANUAL.md  openclaw-full-reference.md  openclaw-telegram-reference.md
gateway/: env.sh  go.mod  文件说明.md
gateway/config/: config.yaml  (+1 more)
sdk/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/ngoclaw/: __init__.py  client.py  types.py
(+210 files in other folders)
